feat: добавить адаптив для мобильных устройств

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,3 +2,10 @@
     max-width: 880px;
     margin: auto;
 }
+
+@media screen and (max-width: 721px) {
+    
+    .footer {
+        max-width: 282px;
+    }
+}
