--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -15,3 +15,13 @@
 .profile__edit-btn:hover {
     opacity: 0.6;
 }
+
+@media screen and (max-width: 721px) {
+    
+    .profile__edit-btn {
+        left: 245px;
+        top: 8px;
+        width: 18px;
+        height: 18px;
+    }
+}
