--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,13 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 721px) {
+    
+    .header {
+        max-width: 320px;
+        min-height: 56px;
+        margin-top: 28px;
+        margin-bottom: 42px;
+    }
+}
