--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -16,3 +16,12 @@
 .profile__add-btn:hover {
     opacity: 0.6;
 }
+
+@media screen and (max-width: 721px) {
+    
+    .profile__add-btn {
+        top: 236px;
+        width: 282px;
+        background-image: url(../../../images/AddButton.svg);
+    }
+}
