--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -8,3 +8,13 @@
     color: #FFFFFF;
     margin: 0;
 }
+
+@media screen and (max-width: 721px) {
+    
+    .profile__description {
+        max-width: 282px;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+    }
+}
