--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,3 +2,13 @@
     position: relative;
     width: 336px;
 }
+
+@media screen and (max-width: 721px) {
+    
+    .profile__info {
+        width: 282px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
