--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,3 +5,14 @@
     display: flex;
     flex-direction: row;
 }
+
+@media screen and (max-width: 721px) {
+    
+    .profile {
+        max-width: 282px;
+        min-height: 286px;
+        margin-bottom: 36px;
+        flex-direction: column;
+        margin-bottom: 36px;
+    }
+}
