--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 /* Подключение стилей у header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__line/header__line.css);
 
 /* Подключение стилей у profile */
 @import url(../blocks/profile/profile.css);
