--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,14 @@
 /* Подключение стилей у footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+/* Подключение стилей у popup */
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__close-btn/popup__close-btn.css);
+@import url(../blocks/input/input.css);
+@import url(../blocks/input/__text/input__text.css);
+@import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
+@import url(../blocks/input/__text/_type/_about/input__text_type_about.css);
+@import url(../blocks/input/__text/_type/_name/input__text_type_name.css);
