--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,7 @@
 
 /* Подключение стилей у popup */
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
