--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -1,6 +1,6 @@
 .element__name {
-    max-width: 246px;
-    font-family: 'Inter';
+    max-width: 200px;
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
