--- a/blocks/input/__text/input__text.css
+++ b/blocks/input/__text/input__text.css
@@ -4,9 +4,11 @@
     max-width: 358px;
     height: 27px;
     box-sizing: border-box;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
     background-color: transparent;
     font-size: 14px;
+    line-height: 17px;
     font-family: inherit;
     padding: 0;
 }
@@ -15,7 +17,5 @@
     
     .input__text {
         max-width: 238px;
-        height: 27px;
-
     }
 }
