--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -4,7 +4,7 @@
     background-color: #000;
     border: 0;
     border-radius: 2px;
-    font-family: 'Inter';
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -26,5 +26,6 @@
         height: 46px;
         font-size: 14px;
         line-height: 17px;
+        margin-top: 45px;
     }
 }
