--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
     max-width: 330px;
-    font-family: 'Inter';
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
@@ -15,5 +15,6 @@
         max-width: 238px;
         font-size: 18px;
         line-height: 22px;
+        margin-bottom: 75px;
     }
 }
