--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,9 +1,10 @@
 .profile {
-    position: relative;
     max-width: 880px;
     margin: 0 auto 50px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 @media screen and (max-width: 721px) {
