--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,13 +1,12 @@
-.input {
+.form {
     max-width: 358px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
 }
 
 @media screen and (max-width: 721px) {
     
-    .input {
+    .form {
         max-width: 238px;
     }
 }
