--- a/pages/index.css
+++ b/pages/index.css
@@ -36,8 +36,8 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
-@import url(../blocks/input/input.css);
-@import url(../blocks/input/__text/input__text.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__text/form__text.css);
 @import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
-@import url(../blocks/input/__text/_type/input__text_type_about.css);
-@import url(../blocks/input/__text/_type/input__text_type_name.css);
+@import url(../blocks/form/__text/_type/form__text_type_about.css);
+@import url(../blocks/form/__text/_type/form__text_type_name.css);
