feat: добавить функционал работы с карточками

--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,8 @@
 @import url(../blocks/element/__caption/element__caption.css);
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__trash/element__trash.css);
 
 /* Подключение стилей у footer */
 @import url(../blocks/footer/footer.css);
@@ -41,3 +43,8 @@
 @import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
 @import url(../blocks/form/__text/_type/form__text_type_about.css);
 @import url(../blocks/form/__text/_type/form__text_type_name.css);
+@import url(../blocks/popup/__type/_view-card/popup__type_view_card.css);
+@import url(../blocks/popup/__img-container/popup__img-container.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+
