--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,11 @@
 .popup {
     position: fixed;
-    display: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s;
     top: 0;
     right: 0;
     left: 0;
