feat: добавить валидацию форм

--- a/pages/index.css
+++ b/pages/index.css
@@ -40,11 +40,14 @@
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__text/form__text.css);
+@import url(../blocks/form/__text/_error/form__text_error.css);
 @import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
+@import url(../blocks/popup/__submit-btn/_disabled/popup__submit-btn_disabled.css);
 @import url(../blocks/form/__text/_type/form__text_type_about.css);
 @import url(../blocks/form/__text/_type/form__text_type_name.css);
 @import url(../blocks/popup/_type/-view/popup_type-view.css);
 @import url(../blocks/popup/__img-container/popup__img-container.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
 
