--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
     min-height: 74px;
     margin: 45px auto 40px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
