--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,9 @@
 /* Подключение стилей у header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__menu/header__menu.css);
+@import url(../blocks/header/__main/header__main.css);
+@import url(../blocks/header/__information/header__information.css);
 
 /* Подключение стилей у profile */
 @import url(../blocks/profile/profile.css);
