--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,10 +3,9 @@
     min-height: 74px;
     margin: 45px auto 40px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-}
 
 @media screen and (max-width: 721px) {
     
