--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: space-between;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+}
 
 @media screen and (max-width: 721px) {
     
