--- a/src/blocks/profile/__add-btn/profile__add-btn.css
+++ b/src/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,7 +1,7 @@
 .profile__add-btn {
     width: 150px;
     height: 50px;
-    background-image: url(../../../images/Add\ Button.svg);
+    background-image: url(../../../images/AddButton2.svg);
     background-size: cover;
     background-color: #000;
     background-repeat: no-repeat;
