--- a/main.css
+++ b/main.css
@@ -54,6 +54,10 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__add-btn/profile__add-btn.css ***!
   \***************************************************************************************************************************************************************************/
 .profile__add-btn{background-color:#000;background-image:url(images/AddButton2..svg);background-repeat:no-repeat;background-size:cover;border:none;border-radius:2px;cursor:pointer;height:50px;width:150px}.profile__add-btn:hover{opacity:.6}@media screen and (max-width:721px){.profile__add-btn{background-image:url(images/AddButton..svg);width:282px}}
+/*!*********************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__avatar-btn/profile__avatar-btn.css ***!
+  \*********************************************************************************************************************************************************************************/
+.profile__avatar-btn{background-image:url(images/Pencil..svg);background-position:50%;background-repeat:no-repeat;border:0;border-radius:50%;height:120px;opacity:0;position:absolute;transition:.3s;width:120px}.profile__avatar-btn:hover{background-color:#000;cursor:pointer;opacity:.8}
 /*!**********************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/elements/elements.css ***!
   \**********************************************************************************************************************************************************/
@@ -86,6 +90,18 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__trash/element__trash.css ***!
   \***********************************************************************************************************************************************************************/
 .element__trash{background:0;background-image:url(images/Trash..svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19px;padding:0;position:absolute;right:20px;top:20px;width:18px}.element__trash:hover{opacity:.6}
+/*!******************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__trash/_disabled/element__trash_disabled.css ***!
+  \******************************************************************************************************************************************************************************************/
+.element__trash_disabled{display:none}
+/*!*****************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__like-container/element__like-container.css ***!
+  \*****************************************************************************************************************************************************************************************/
+.element__like-container{align-items:center;display:flex;flex-direction:column;gap:3px;justify-content:space-between}
+/*!***************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__counter/element__counter.css ***!
+  \***************************************************************************************************************************************************************************/
+.element__counter{color:#000;font-family:Inter;font-size:13px;font-style:normal;font-weight:400;line-height:normal;margin:0;max-width:10px;text-align:center}
 /*!******************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/footer/footer.css ***!
   \******************************************************************************************************************************************************/
@@ -110,6 +126,10 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__title/popup__title.css ***!
   \*******************************************************************************************************************************************************************/
 .popup__title{color:#000;font-family:Inter,Helvetica Neue,Arial,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0 0 54px;max-width:330px}@media screen and (max-width:721px){.popup__title{font-size:18px;line-height:22px;margin-bottom:75px;max-width:238px}}
+/*!**********************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__title/_delete/popup__title_delete.css ***!
+  \**********************************************************************************************************************************************************************************/
+.popup__title_delete{margin-bottom:38px}
 /*!***************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__close-btn/popup__close-btn.css ***!
   \***************************************************************************************************************************************************************************/
@@ -166,6 +186,10 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/form/__input-error/form__input-error.css ***!
   \*****************************************************************************************************************************************************************************/
 .form__input-error{box-sizing:border-box;color:red;display:flex;flex-direction:column;font-size:12px;font-weight:400;justify-content:center;line-height:15px;min-height:30px;min-width:358px;padding:0}@media screen and (max-width:721px){.form__input-error{min-width:238px}}
+/*!*****************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__delete-btn/popup__delete-btn.css ***!
+  \*****************************************************************************************************************************************************************************/
+.popup__delete-btn{background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-family:Inter,Helvetica Neue,Arial,sans-serif;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;text-align:center;width:358px}.popup__delete-btn:hover{opacity:.8}@media screen and (max-width:721px){.popup__delete-btn{font-size:14px;height:46px;line-height:17px;margin-top:45px;width:238px}}
 /*!*********************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/pages/index.css ***!
   \*********************************************************************************************************************************************/
